# GLTT

./: CMakeLists.txt  README.md  main.cpp
include/: GL.hpp
include/entt/: entt.hpp
include/mc/: DefaultEntities.hpp  RenderEntities.hpp  RenderSystems.hpp
resources/shaders/: ShaderDefaultColor2D.frag  ShaderDefaultColor2D.vert
